# Eco2-rust

./: .gitignore  Cargo.toml  LICENSE  LICENSE-xxtea-rust.md  README.md
src/: bluetooth.rs  decryption.rs  encryption.rs  main.rs
src/commands/: forget.rs  list.rs  mod.rs  read.rs  scan.rs  set.rs  show.rs  sync.rs
src/models/: mod.rs  parsed_thermostat.rs  thermostat_names.rs  thermostats.rs
