[package]
name = "eco2"
version = "0.1.0"
authors = ["Ole Friis Østergaard <olefriis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.7.2"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
log = "0.4.11"
env_logger = "0.7.1"
xxtea = "0.2.0"
chrono = "0.4"